# opengl-practice

./: .gitignore  .gitmodules  CMakeLists.txt  build-deps.bash  build.bash  config.mk  deps.bash
include/: common.hpp
include/glad/: gl.h
scripts/: glfw.bash  glm.bash
src/: CMakeLists.txt  GlfwImport.cmake  GlmImport.cmake
src/00-triangle/: main.cpp
src/01-triangle/: build.cpp  fragment_shader.glsl  main.cpp
src/common/: CMakeLists.txt  build.cpp  common.cpp
src/libcommon/: Makefile
src/triangle-0/: CMakeLists.txt  fragment_shader.glsl  vertex_shader.glsl
src/triangle-1/: CMakeLists.txt  Makefile  main.cpp  vertex_shader.glsl
